--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ referrerpolicy="no-referrer" />
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo_text.svg" alt="logo">
+                    <img src="images/logo_text.svg" alt="wordmark">
                 </a>
             </div>
 
@@ -45,12 +45,17 @@ referrerpolicy="no-referrer" />
     <!-- Hero -->
      <section class="Hero">
          <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-heading text-xxllight">
+            <div class="hero-content" style="display: flex; justify-content:center;">
+                <img src="images/icon_logo.svg" alt="icon" style="width: 388px; height:388px; margin-right: 70px;">
+                <div style="display: block;">
+                <h1 class="hero-heading text-xxllight" style="margin: 0px 0px;">
                     Console unlocked?
-                    <br>
-                    <b>Here's what's next.</b>
                 </h1>
+                <h1 class="hero-heading text-xxl" style="margin: 0px 0px;">
+                    Here's what's next.
+                </h1>
+            </div>
+            <img src="images/icon_arrow.svg" class="filter-blue" alt="arrow" style="padding-left: 60px;">
             </div>
          </div>
      </section>
